# Buildroot_for_RPI4

./: .gitignore  .gitmodules  Config.in  Makefile  external.desc  external.mk
board/raspberrypi/: config_4_64bit_lvgl.txt
configs/: raspberrypi4_64_lvgl_defconfig
package/lvgl/: Config.in  lvgl.hash  lvgl.mk
package/lvgl_app/: Config.in  lvgl_app.mk
package/lvgl_app/lvgl_app/: CMakeLists.txt  main.c
package/test_module/: Config.in  Makefile  test_module.c  test_module.mk
